--- a/index.html
+++ b/index.html
@@ -2,21 +2,21 @@
 <!DOCTYPE html>
 	<head>
 		<meta charset="utf-8">
-		<title>Title</title>
+		<title>Snowflake Catcher</title>
 		<link href='http://fonts.googleapis.com/css?family=Open+Sans' rel='stylesheet' type='text/css'>
 		<link rel="stylesheet" href="styles.css">
 		<script src="processing.js"></script>
 	</head>
 	<body>
 		<header>
-			<h1>Headline</h1>
+			<h1>Rainbow Catcher</h1>
 		</header>
 			<section id="content">
 				<canvas id="SnowflakeCatcher" data-processing-sources="SnowflakeCatcher.pde">
 				</canvas>
 		    </section>
 	    <footer>
-		    Footer
+		    Left click to draw a catcher. Right click to erase the catcher.
 	    </footer>
 	</body>
 </html>
